feat: make it build...finally [2]

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,19 @@
-version: '3'
+version: '3.8'
 
 services:
+  goapp:
+    build: .
+    volumes:  
+      - .:/app
+    ports:
+      - 8080:8080
+      - 8081:8081
+    depends_on:
+      mysql:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   mysql:
     image: mysql:5.7
     container_name: mysql
@@ -9,10 +22,17 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: orders
       MYSQL_PASSWORD: root
+      MYSQL_USER: user
     ports:
       - 3306:3306
     volumes:
-      - .docker/mysql:/var/lib/mysql
+      - mysql-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "mysql", "-uroot", "-proot"]
+      interval: 10s
+      timeout: 5s 
+      retries: 5
+      start_period: 30s
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -24,3 +44,11 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+volumes:
+  mysql-data:
