--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -7,11 +7,6 @@ exec:
   filename: internal/infra/graph/generated.go
   package: graph
 
-# Uncomment to enable federation
-# federation:
-#   filename: graph/federation.go
-#   package: graph
-
 # Where should any generated models go?
 model:
   filename: internal/infra/graph/model/models_gen.go
@@ -20,24 +15,8 @@ model:
 # Where should the resolver implementations go?
 resolver:
   layout: follow-schema
-  dir: graph
+  dir: internal/infra/graph    # Ensure this is the correct path
   package: graph
-
-# Optional: turn on use ` + "`" + `gqlgen:"fieldName"` + "`" + ` tags in your models
-# struct_tag: json
-
-# Optional: turn on to use []Thing instead of []*Thing
-# omit_slice_element_pointers: false
-
-# Optional: turn off to make struct-type struct fields not use pointers
-# e.g. type Thing struct { FieldA OtherThing } instead of { FieldA *OtherThing }
-# struct_fields_always_pointers: true
-
-# Optional: turn off to make resolvers return values instead of pointers for structs
-# resolvers_always_return_pointers: true
-
-# Optional: set to speed up generation time by not performing a final validation pass.
-# skip_validation: true
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
@@ -45,10 +24,6 @@ autobind:
 #  - "github.com/vinicius-gregorio/fc_clean_arch_go/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
-#
-# The first line in each type will be used as defaults for resolver arguments and
-# modelgen, the others will be allowed when binding to fields. Configure them to
-# your liking
 models:
   ID:
     model:
